--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,6 @@
+@import '~bulma-timeline';
+// @import '~bulma-checkradio';
+
 .App {
   text-align: center;
 }
@@ -23,6 +26,10 @@
 }
 
 @keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
